--- a/js-tratando dados/soma.html
+++ b/js-tratando dados/soma.html
@@ -9,10 +9,11 @@
     <h1>Olá, mundo!</h1>
     <p>primeiro comando javascript</p>
     <script>
-        var n1 = window.prompt('Digite um número!')
-        var n2 = window.prompt('Digite outro número')
+        var n1 = Number.parseFloat(window.prompt('Digite um número!'))
+        var n2 = Number(window.prompt('Digite outro número'))
         var s = n1 + n2
-        window.alert('A soma dos números é ' + s)
+        window.alert('A soma entre ' + n1 + ' e ' + n2 + ' é igual a ' + s) //duas maneiras de fazer
+        window.alert(`A soma etnre ${n1} e ${n2} é igual a ${s}`) //feito com crase ``
     </script>
 </body>
 </html>
