--- a/js-disparar alertas/ex01.html
+++ b/js-disparar alertas/ex01.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primeiro exercicio de javascript</title>
-</head>
-<body>
-    <h1>Olá, mundo!</h1>
-    <p>primeiro comando javascript</p>
-    <script>
-        window.alert('Olá, mundo!') 
-        window.confirm('Estou gostando de JavaScript')
-        window.prompt('Qual é o seu nome ?')
-    </script>
-</body>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Primeiro exercicio de javascript</title>
+   </head>
+   <body>
+      <h1>Olá, mundo!</h1>
+      <p>primeiro comando javascript</p>
+      <script>
+         window.alert("Olá, mundo!");
+         window.confirm("Estou gostando de JavaScript");
+         window.prompt("Qual é o seu nome ?");
+      </script>
+   </body>
 </html>
