--- a/js-tratando dados/formatação de strings.html
+++ b/js-tratando dados/formatação de strings.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-    <script>
-        var nome = window.prompt(`qual é o seu nome ?`)
-        document.write(`Olá, ${nome}! Seu nome tem ${nome.length} letras! <br>`)
-        document.write(`Seu nome em maiúsculas fica assim: ${nome.toUpperCase()} <br>`)
-        document.write(`Seu nome em minúsculas fica assim: ${nome.toLowerCase()}`)
-    </script>
-</body>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Document</title>
+   </head>
+   <body>
+      <script>
+         var nome = window.prompt(`qual é o seu nome ?`);
+         document.write(
+            `Olá, ${nome}! Seu nome tem ${nome.length} letras! <br>`
+         );
+         document.write(
+            `Seu nome em maiúsculas fica assim: ${nome.toUpperCase()} <br>`
+         );
+         document.write(
+            `Seu nome em minúsculas fica assim: ${nome.toLowerCase()}`
+         );
+      </script>
+   </body>
 </html>
