ajuste na config

--- a/desafio horario/index.html
+++ b/desafio horario/index.html
@@ -6,7 +6,7 @@
     <title>Horário</title>
     <link rel="stylesheet" href="../desafio horario/syle.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
         <h1>Hora do dia</h1>
     </header>
@@ -15,9 +15,6 @@
         </div>
         <div id="imagem">
             <img id="mad" src="imagens/madrugada.jpg" alt="Madrugada">
-            <img id="man" src="imagens/manha.jpg" alt="Manhã">
-            <img id="tar" src="imagens/tarde.jpg" alt="Tarde">
-            <img id="noi" src="imagens/noite.jpg" alt="Noite">
         </div>
     </main>
     <footer>
