--- a/desafio horario/index.html
+++ b/desafio horario/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horário</title>
-    <link rel="stylesheet" href="../desafio horario/syle.css">
+    <link rel="stylesheet" href="../desafio horario/style.css">
 </head>
 <body onload="carregar()">
     <header>
