correção de codigo for

--- a/desafio contas/index.html
+++ b/desafio contas/index.html
@@ -16,7 +16,7 @@
             <input type="number" name="in" id="intxt">
 
             <p>
-                <label for="fim">Fim: </label>
+                <label for="fimtxt">Fim: </label>
                 <input type="number" name="fim" id="fimtxt">
             </p>
 
@@ -28,9 +28,16 @@
             <input type="button" value="Contar" onclick="contar()">
         </div>
         <div id="res">
-            
+            inicio
+        </div>
+        
+        <div id="res2">
+            fim
         </div>
 
+        <div id="res3">
+            passo
+        </div>
     </main>
 
     <footer>
