simplificação de codigo

--- a/desafio contas/index.html
+++ b/desafio contas/index.html
@@ -17,27 +17,17 @@
 
             <p>
                 <label for="fimtxt">Fim: </label>
-                <input type="number" name="fim" id="fimtxt">
+                <input type="number" name="fim" id="fimtxt" required>
             </p>
 
             <p>
                 <label for="pastxt">Passo: </label>
-                <input type="number" name="pas" id="pastxt">
+                <input type="number" name="pas" id="pastxt" required>
             </p>
 
             <input type="button" value="Contar" onclick="contar()">
-        </div>
-        <div id="res">
-            inicio
-        </div>
-        
-        <div id="res2">
-            fim
-        </div>
 
-        <div id="res3">
-            passo
-        </div>
+        <div id="resultado"></div>
     </main>
 
     <footer>
