correção e finalização de codigo

--- a/desafio tabuada/index.html
+++ b/desafio tabuada/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="../desafio horario/style.css">
+    <title>tabuada</title>
+    <link rel="stylesheet" href="../desafio tabuada/style.css">
 </head>
-<body onload="carregar()">
+<body>
     <header>
-        <h1></h1>
+        <h1>Tabuada</h1>
     </header>
     <main>
         <div id="subtitulo">
+            <label for="num">Número: </label>
+            <input type="number" name="num" id="num" required>
 
+            <input type="button" value="Gerar Tabuada">
         </div>
-        <div id="imagem">
+        <div id="tabuada">
             
         </div>
     </main>
@@ -22,6 +25,6 @@
         <p>Created by Korrea</p>
     </footer>
 
-    <script src="../desafio horario/script.js"></script>
+    <script src="../desafio tabuada/script.js"></script>
 </body>
 </html>
