--- a/desafio tabuada/index.html
+++ b/desafio tabuada/index.html
@@ -15,10 +15,10 @@
             <label for="num">Número: </label>
             <input type="number" name="num" id="num" required>
 
-            <input type="button" value="Gerar Tabuada">
+            <input type="button" value="Gerar Tabuada" onclick="gerar()">
         </div>
-        <div id="tabuada">
-            
+        <div id="tabela">
+            <select name="tab" id="tabuada" size="10"></select>
         </div>
     </main>
     <footer>
