--- a/desafio horario/index.html
+++ b/desafio horario/index.html
@@ -8,12 +8,12 @@
 </head>
 <body onload="carregar()">
     <header>
-        <h1>Hora do dia</h1>
+        <h1>Day hour (Hora do dia)</h1>
     </header>
     <main>
         <div id="subtitulo">
         </div>
-        <div id="imagem">
+        <div id="imag1em">
             <img id="mad" src="imagens/madrugada.jpg" alt="Madrugada">
         </div>
     </main>
