ex 10 de javascript

--- a/exercicios/10 - numeros inteiros.html
+++ b/exercicios/10 - numeros inteiros.html
@@ -9,7 +9,7 @@
 <body id="body">
     <header>
         <h1>
-            Faça um programa que imprima na tela apenas os números ímpares entre 1 e 50.
+            Faça um programa que receba dois números inteiros e gere os números inteiros que estão no intervalo compreendido por eles.
     </header>
     <main id="main">
         <div id="principal">
