--- a/desafio horario/index.html
+++ b/desafio horario/index.html
@@ -8,7 +8,7 @@
 </head>
 <body onload="carregar()">
     <header>
-        <h1>Day hour (Hora do dia)</h1>
+        <h1>Day hour</h1>
     </header>
     <main>
         <div id="subtitulo">
