--- a/exercicios/10 - numeros inteiros.html
+++ b/exercicios/10 - numeros inteiros.html
@@ -13,7 +13,8 @@
     </header>
     <main id="main">
         <div id="principal">
-
+            <input type="number" name="n1" id="n1">
+            <input type="number" name="n2" id="n2">
         
         <div>
             <input type="button" value="Imprimir" onclick="imprimir()">
