--- a/exercicios/10 - numeros inteiros.html
+++ b/exercicios/10 - numeros inteiros.html
@@ -23,15 +23,14 @@
     </main>
 
     <script>
+        function imprimir() {
         var num1 = document.getElementById('num1')
         var n1 = Number(num1.value)
         var num2 = document.getElementById('num2')
         var n2 = Number(num2.value)
         var res = document.getElementById('res')
-        res.innerText = n2
-        function imprimir() {
-            for (var res = r; n1 >= n2; n2++) {
-                res.innertext += n2
+            for (n2++ && n1--; n1 >= n2; n2++) {   
+                res.innerHTML += `${n2} `
             }
         }
         
