--- a/desafio calculadora/index.html
+++ b/desafio calculadora/index.html
@@ -4,12 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
+    <link rel="stylesheet" href="style.css"> <!--Mobile first-->
+
 </head>
 <body>
     <main>
         <div id="visor"></div>
-        <div id="numeros"></div>
-        <div id="sinais"></div>
+        <table id="botoes">
+            <tr>
+                <td>C</td>
+                <td>×</td>
+                <td>÷</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>8</td>
+                <td>9</td>
+                <td id="mais" rowspan="2">+</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+                <td rowspan="2">=</td>
+            </tr>
+            <tr>
+                <td colspan="2">0</td>
+                <td>,</td>
+            </tr>
+        </table>
     </main>
 </body>
 </html>
