--- a/desafio calculadora/index.html
+++ b/desafio calculadora/index.html
@@ -9,36 +9,45 @@
 </head>
 <body>
     <main>
-        <div id="visor"></div>
+        <div id="visor">
+            <div id="calculo">
+                <div id="c1">10</div>
+                <div id="sinal"></div>
+                <div id="c3">5</div>
+            </div>
+            <div id="res"></div>
+        </div>
         <table id="botoes">
             <tr>
-                <td>C</td>
-                <td>×</td>
-                <td>÷</td>
-                <td>-</td>
+                <td id="c" onclick="zerar()">C</td>
+                <td id="mult" onclick="mult()">×</td>
+                <td id="div" onclick="div()">÷</td>
+                <td id="menos" onclick="sub()">-</td>
             </tr>
             <tr>
-                <td>7</td>
-                <td>8</td>
-                <td>9</td>
-                <td id="mais" rowspan="2">+</td>
+                <td id="7" onclick="sete()">7</td>
+                <td id="8" onclick="oito()">8</td>
+                <td id="9" onclick="nove()">9</td>
+                <td id="mais" onclick="soma()" rowspan="2">+</td>
             </tr>
             <tr>
-                <td>4</td>
-                <td>5</td>
-                <td>6</td>
+                <td id="4" onclick="quatro()">4</td>
+                <td id="5" onclick="cinco()">5</td>
+                <td id="6" onclick="seis()">6</td>
             </tr>
             <tr>
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
-                <td rowspan="2">=</td>
+                <td id="1" onclick="um()">1</td>
+                <td id="2" onclick="dois()">2</td>
+                <td id="3" onclick="tres()">3</td>
+                <td id="igual" rowspan="2" onclick="igual()">=</td>
             </tr>
             <tr>
-                <td colspan="2">0</td>
-                <td>,</td>
+                <td id="0" colspan="2" onclick="zero()">0</td>
+                <td id="ponto" onclick="virg()">,</td>
             </tr>
         </table>
     </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
