ajuste nos simbolos

--- a/desafio calculadora/index.html
+++ b/desafio calculadora/index.html
@@ -12,11 +12,11 @@
         <main>
             <div id="visor">
                 <div id="calculo">
-                    <div id="c1">10</div>
+                    <div id="c1"></div>
                     <div id="sinal"></div>
-                    <div id="c3">5</div>
+                    <div id="c3"></div>
                 </div>
-                <div id="res"></div>
+                <div id="resultado"></div>
             </div>
             <table id="botoes">
                 <tr>
