alteração de nomes

--- a/desafio calculadora/index.html
+++ b/desafio calculadora/index.html
@@ -12,9 +12,9 @@
         <main>
             <div id="visor">
                 <div id="calculo">
-                    <div id="c1"></div>
+                    <div id="valor2"></div>
                     <div id="sinal"></div>
-                    <div id="c3"></div>
+                    <div id="valor1"></div>
                 </div>
                 <div id="resultado"></div>
             </div>
