--- a/exercicios/10 - numeros inteiros.html
+++ b/exercicios/10 - numeros inteiros.html
@@ -9,12 +9,13 @@
 <body id="body">
     <header>
         <h1>
-            Faça um programa que imprima na tela apenas os números ímpares entre 1 e 50.
+            Faça um programa que receba dois números inteiros e gere os números inteiros que estão no intervalo compreendido por eles.
     </header>
     <main id="main">
         <div id="principal">
-
-        
+            <p>Numero 1: <input type="number" name="n1" id="num1" value="10"></p>
+            <p>Numero 2: <input type="number" name="n2" id="num2" value="4"></p>
+            <p id="res"></p>
         <div>
             <input type="button" value="Imprimir" onclick="imprimir()">
         </div>
@@ -22,13 +23,17 @@
     </main>
 
     <script>
-        var num = document.getElementById('principal')
         function imprimir() {
-            for (var n = 1; n <= 50; n++) {
-                num.innerHTML += n + `<br>`
-                n++
+        var num1 = document.getElementById('num1')
+        var n1 = Number(num1.value)
+        var num2 = document.getElementById('num2')
+        var n2 = Number(num2.value)
+        var res = document.getElementById('res')
+            for (n2++ && n1--; n1 >= n2; n2++) {   
+                res.innerHTML += `${n2} `
             }
         }
+        
     </script>
 </body>
 </html>
