correção de bug ao resetar

--- a/desafio calculadora/index.html
+++ b/desafio calculadora/index.html
@@ -22,7 +22,7 @@
                 <tr>
                     <td id="c" onclick="zerar()">C</td>
                     <td id="mult" onclick="mult()">×</td>
-                    <td id="div" on click="div()">÷</td>
+                    <td id="div" onclick="div()">÷</td>
                     <td id="menos" onclick="sub()">-</td>
                 </tr>
                 <tr>
@@ -44,7 +44,7 @@
                 </tr>
                 <tr>
                     <td id="0" colspan="2" onclick="zero()">0</td>
-                    <td id="ponto" onclick="virg()">,</td>
+                    <td id="ponto" onclick="porc()">%</td>
                 </tr>
             </table>
         </main>
