mudança no estilo

--- a/desafio calculadora/index.html
+++ b/desafio calculadora/index.html
@@ -20,27 +20,27 @@
             </div>
             <table id="botoes">
                 <tr>
-                    <td id="c" onclick="zerar()">C</td>
+                    <td class="esp c" onclick="zerar()">C</td>
                     <td id="mult" onclick="mult()">×</td>
                     <td id="div" onclick="div()">÷</td>
                     <td id="menos" onclick="sub()">-</td>
                 </tr>
                 <tr>
-                    <td id="7" onclick="sete()">7</td>
-                    <td id="8" onclick="oito()">8</td>
-                    <td id="9" onclick="nove()">9</td>
+                    <td class="num 7" onclick="sete()">7</td>
+                    <td class="num 8" onclick="oito()">8</td>
+                    <td class="num 9" onclick="nove()">9</td>
                     <td id="mais" onclick="soma()" rowspan="2">+</td>
                 </tr>
                 <tr>
-                    <td id="4" onclick="quatro()">4</td>
-                    <td id="5" onclick="cinco()">5</td>
-                    <td id="6" onclick="seis()">6</td>
+                    <td class="num 4" onclick="quatro()">4</td>
+                    <td class="num 5" onclick="cinco()">5</td>
+                    <td class="num 6" onclick="seis()">6</td>
                 </tr>
                 <tr>
-                    <td id="1" onclick="um()">1</td>
-                    <td id="2" onclick="dois()">2</td>
-                    <td id="3" onclick="tres()">3</td>
-                    <td id="igual" rowspan="2" onclick="igual()">=</td>
+                    <td class="num 1" onclick="um()">1</td>
+                    <td class="num 2" onclick="dois()">2</td>
+                    <td class="num 3" onclick="tres()">3</td>
+                    <td class="esp igual" rowspan="2" onclick="igual()">=</td>
                 </tr>
                 <tr>
                     <td id="0" colspan="2" onclick="zero()">0</td>
