--- a/desafio calculadora/index.html
+++ b/desafio calculadora/index.html
@@ -43,7 +43,7 @@
                     <td class="esp igual" rowspan="2" onclick="igual()">=</td>
                 </tr>
                 <tr>
-                    <td id="0" colspan="2" onclick="zero()">0</td>
+                    <td class="num 0" colspan="2" onclick="zero()">0</td>
                     <td id="ponto" onclick="porc()">%</td>
                 </tr>
             </table>
