--- a/exercicios/11 - soma dos ultimos numeros.html
+++ b/exercicios/11 - soma dos ultimos numeros.html
@@ -9,7 +9,7 @@
 <body id="body">
     <header>
         <h1>
-            Faça um programa que receba dois números inteiros e gere os números inteiros que estão no intervalo compreendido por eles.
+            Altere o programa anterior para mostrar no final a soma dos números.
     </header>
     <main id="main">
         <div id="principal">
@@ -31,7 +31,11 @@
         var res = document.getElementById('res')
             for (n2++ && n1--; n1 >= n2; n2++) {   
                 res.innerHTML += `${n2} `
+                for (var soma = n2; n1 >= n2; + n2) {
+                    
+                }   
             }
+            res.innerHTML += ` = ${soma}`
         }
         
     </script>
