--- a/exercicios/11 - soma dos ultimos numeros.html
+++ b/exercicios/11 - soma dos ultimos numeros.html
@@ -24,22 +24,26 @@
 
     <script>
         function imprimir() {
-        var num1 = document.getElementById('num1')
-        var n1 = Number(num1.value)
-        var num2 = document.getElementById('num2')
-        var n2 = Number(num2.value)
-        var res = document.getElementById('res')
-        res.innerHTML = ""
-        if (n1 >= n2) {
-            for (n2++ && n1--; n1 >= n2; n2++) {   
-                res.innerHTML += `${n2} `
+            var num1 = document.getElementById('num1')
+            var n1 = Number(num1.value)
+            var num2 = document.getElementById('num2')
+            var n2 = Number(num2.value)
+            var res = document.getElementById('res')
+            res.innerHTML = ""
+            if (n1 > n2) {
+                n1--
+                for (var soma = n2; n1 > n2; soma += (+n2)) {
+                    n2++
+                    res.innerHTML += `${n2} `
             }
-        } else {
-            for (n1++ && n2--; n2 >= n1; n1++) {   
-                res.innerHTML += `${n1} `
+            } else if (n2 > n1) {
+                n2--
+                for (var soma = n1; n2 > n1; soma += (+n1)) { 
+                    n1++
+                    res.innerHTML += `${n1} `
+                }
             }
-        }
-            
+            res.innerHTML += ` = ${soma}`
         }
         
     </script>
