--- a/exercicios/10 - numeros inteiros copy.html
+++ b/exercicios/10 - numeros inteiros copy.html
@@ -13,8 +13,8 @@
     </header>
     <main id="main">
         <div id="principal">
-            <p>Numero 1: <input type="number" name="n1" id="num1" value="10"></p>
-            <p>Numero 2: <input type="number" name="n2" id="num2" value="4"></p>
+            <p>Numero 1: <input type="number" name="n1" id="num1"></p>
+            <p>Numero 2: <input type="number" name="n2" id="num2"></p>
             <p id="res"></p>
         <div>
             <input type="button" value="Imprimir" onclick="imprimir()">
@@ -24,22 +24,21 @@
 
     <script>
         function imprimir() {
-        var num1 = document.getElementById('num1')
-        var n1 = Number(num1.value)
-        var num2 = document.getElementById('num2')
-        var n2 = Number(num2.value)
-        var res = document.getElementById('res')
-        res.innerHTML = ""
-        if (n1 >= n2) {
-            for (n2++ && n1--; n1 >= n2; n2++) {   
-                res.innerHTML += `${n2} `
+            var num1 = document.getElementById('num1')
+            var n1 = Number(num1.value)
+            var num2 = document.getElementById('num2')
+            var n2 = Number(num2.value)
+            var res = document.getElementById('res')
+            res.innerHTML = ""
+            if (n1 >= n2) {
+                for (n2++ && n1--; n1 >= n2; n2++) {   
+                    res.innerHTML += `${n2} `
+                }
+            } else {
+                for (n1++ && n2--; n2 >= n1; n1++) {   
+                    res.innerHTML += `${n1} `
+                }
             }
-        } else {
-            for (n1++ && n2--; n2 >= n1; n1++) {   
-                res.innerHTML += `${n1} `
-            }
-        }
-            
         }
         
     </script>
