att de ambiente e de desafio analisador, adição de resultado

--- a/desafio analisador de numeros/index.html
+++ b/desafio analisador de numeros/index.html
@@ -18,7 +18,13 @@
             <input type="button" value="Adicionar" onclick="adicionar()">
         </div>
         <div id="tabela">
-            <select name="tab" id="re" size="10"></select>
+            <select name="tab" id="numadd" size="7"></select>
+        </div>
+        <div>
+            <input type="button" value="Finalizar" onclick="finalizar()">
+            <p id="res">
+
+            </p>
         </div>
     </main>
     <footer>
