adaptação de js

--- a/desafio analisador de numeros/index.html
+++ b/desafio analisador de numeros/index.html
@@ -18,7 +18,7 @@
             <input type="button" value="Adicionar" onclick="adicionar()">
         </div>
         <div id="tabela">
-            <select name="tab" id="numadd" size="7"></select>
+            <select name="tab" id="lista" size="7"></select>
         </div>
         <div>
             <input type="button" value="Finalizar" onclick="finalizar()">
